fixed overflow of text in Sobre section and increase the size of icons

--- a/src/Styles/Less/App.less
+++ b/src/Styles/Less/App.less
@@ -115,7 +115,7 @@
       display: grid;
       grid-template-columns: 33.33% 33.33% 33.33%; //Set a fixed width
       grid-template-areas: "area-1 area-2 area-3";
-      margin: 0 10%;
+      margin: 0 4%;
       opacity: 1;
       @media @phone {
         display: block;
@@ -131,6 +131,13 @@
           border-bottom: 1px solid rgba(66, 74, 78, 0.5);
           padding-top: 10%;
           padding-bottom: 5%;
+          white-space: nowrap;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          ul {
+            padding-right: 10%;
+          }
         }
       }
       .area-2 {
@@ -143,6 +150,13 @@
           border-bottom: 1px solid rgba(66, 74, 78, 0.5);
           padding-top: 10%;
           padding-bottom: 5%;
+          white-space: nowrap;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          ul {
+            padding-right: 10%;
+          }
         }
       }
       .area-3 {
@@ -152,6 +166,13 @@
           border-bottom: 1px solid rgba(66, 74, 78, 0.5);
           padding-top: 10%;
           padding-bottom: 5%;
+          white-space: nowrap;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          ul {
+            padding-right: 10%;
+          }
         }
       }
     }
@@ -355,6 +376,9 @@
   .App-header {
     font-size: calc(5px + 2vmin);
     font-weight: bold;
+  }
+  @media @phone {
+    display: block;
   }
 }
 .transparent {
